# reaction_pathway_enumerator

./: .gitignore  Molecule.py  README.md  environment.yml  generate_products.py  permutate_bonding_systems.py  setup.cfg
run_scripts/: run_enumerator.py  run_get_energy.py
src/calc/negishi_coupling_red_elimination/: r0_NBO_manual_order.com  r0_NBO_natural_order.com
src/enumerator/: Molecule kopie.py  Molecule.py  Molecule_intermediate.py  enumerate.py  generate_products.py  generate_smiles.py  generate_smiles_alt.py  get_energies.py  get_energies_alt.py  localized_configuration.py  localized_configuration_NBO.py  nbo.py  orbital_systems.py  reacting_system.py  utils.py  utils_nbo.py
src/enumerator.egg-info/: PKG-INFO  SOURCES.txt
src/enumerator/old/: Molecule kopie.py  enumerate kopie.py  generate_products_new kopie.py  generate_smiles kopie.py  get_energies kopie.py  utils kopie.py
src/enumerator/old2/: Molecule kopie.py  Molecule_fairly_colse.py  Molecule_lol.py  Molecule_old.py  generate_products.py  generate_smiles kopie.py
tests/: tests kopie.py  tests.py
