
[metadata]
name = enumerator
version = 0.0.1
license = MIT
description = Enumeration of potential products based on an initial SMILES string
long_description = file: README.md
author = Thijs Stuyver
classifiers=

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where=src